<resources>
    <string name="locale">en</string>
    <string name="app_name">ORU Content Transfer</string>
    <string name="ept_empty_line">\n</string>
    <string name="ept_next_button">Next</string>
    <string name="ept_back_button">Back</string>
    <string name="ept_finish_button">Finish</string>
    <string name="ept_exit_button">Exit</string>
    <string name="ept_start_over_button">Start over</string>
    <string name="ept_app_name">Content Transfer</string>
    <string name="ept_welcome_text_top_1">Content Transfer</string>
    <string name="ept_welcome_text_bottom_1">This application will help you copy your contacts, calendars and photos to another device.\n\nTouch the &quot;Next&quot; button to continue.</string>
    <string name="ept_select_device_title">Select Device</string>
    <string name="ept_select_device_text">\nSelect your other device from the list below.\n\nEnsure your other device is running the app and is connected to the same Wi-Fi network.\n"</string>
    <string name="ept_display_pin_title">Confirm PIN</string>
    <string name="ept_display_pin_text">\nFor security reasons you must enter the following PIN on your other device. Continue on your other device, until you are prompted to enter the PIN:\n</string>
    <string name="ept_select_content_title">Select content</string>
    <string name="ept_select_content_contacts">Contacts</string>
    <string name="ept_select_content_calendar">Calendars</string>
    <string name="ept_select_content_messages">SMS</string>
    <string name="ept_select_content_photos">Photos</string>
    <string name="ept_select_content_videos">Videos</string>
    <string name="ept_select_content_audio">Audio</string>
    <string name="ept_select_content_app">Apps</string>
    <string name="ept_select_content_call_logs">Call Logs</string>
    <string name="ept_select_content_settings">Settings</string>
    <string name="ept_select_content_documents">Documents</string>
    <string name="ept_transfer_time">Transfer Time</string>
    <string name="ept_progress_title">Copying Data</string>
    <string name="ept_progress_text">\nPlease wait while your data is copied.\n</string>
    <string name="ept_complete_title">Transfer Complete</string>
    <string name="ept_complete_text">\nThe following data has been copied:</string>
    <string name="ept_select_device_help">It may take a while to detect your other device. Check that your other device is running the app and is connected to the same unrestricted Wi-Fi network.</string>
    <string name="ept_connect_to_wifi_title">Connect to WiFi</string>
    <string name="ept_connect_to_wifi_message">This device is not connected to a WiFi network. You must connect this device to a WiFi network before continuing.</string>
    <string name="ept_scanning_for_devices_title">Searching for Devices</string>
    <string name="ept_could_not_copy_data_title">Could Not Copy Data</string>
    <string name="ept_could_not_copy_data_message">New device does not have enough storage. Unselect some content type on old device or free up some more space on new device and try again.</string>
    <string name="ept_ok">OK</string>
    <string name="ept_progress_details">{0} of {1}</string>
    <string name="ept_processing_calendar">Processing calendars</string>
    <string name="ept_processing_contacts">Processing contacts</string>
    <string name="ept_processing_call_logs">Processing call logs</string>
    <string name="ept_processing_messages">Processing messages</string>
    <string name="ept_sending_calendar">Sending calendars</string>
    <string name="ept_sending_contacts">Sending contacts</string>
    <string name="ept_sending_call_logs">Sending call logs</string>
    <string name="ept_sending_messages">Sending messages</string>
    <string name="ept_sending_photos">Sending photos</string>
    <string name="ept_sending_videos">Sending videos</string>
    <string name="ept_recieving_calendar">Receiving calendars</string>
    <string name="ept_receiving_contacts">Receiving contacts</string>
    <string name="ept_receiving_call_logs">Receiving call logs</string>
    <string name="ept_receiving_settings">Receiving Settings</string>
    <string name="ept_receiving_messages">Receiving messages</string>
    <string name="ept_receiving_photos">Receiving photos</string>
    <string name="ept_receiving_video">Receiving videos</string>
    <string name="ept_sent_calendar">Sent calendars</string>
    <string name="ept_sent_contacts">Sent contacts</string>
    <string name="ept_sent_call_logs">Sent call logs</string>
    <string name="ept_sent_messages">Sent messages</string>
    <string name="ept_confirm_pin">\nContinue on your other device until it displays the PIN, then enter it on this device.\n</string>
    <string name="ept_connected_title">Connected</string>
    <string name="ept_connected_text">\nPlease continue the setup on the \n other device.</string>
    <string name="ept_source_or_target_title">Options</string>
    <string name="ept_source_or_target_text_1">\nYou have selected this device:\n</string>
    <string name="ept_source_or_target_text_2">\nSelect an option below depending on whether you want to copy data to or from the selected device:\n</string>
    <string name="ept_transfer_to_selected_device_button_text">Copy data to selected device</string>
    <string name="ept_transfer_from_selected_device_button_text">Copy data from selected device</string>
    <string name="cmd_local_wifi_or_cloud_text">You can transfer your data wirelessly or you can backup and restore using Google Drive</string>
    <string name="cmd_local_wifi_button_text">To or From Another Device Over a WiFi Network</string>
    <string name="cmd_wifi_direct_button_text">To or From Another Device Using WiFi Direct</string>
    <string name="cmd_google_drive_button_text">Back Up or Restore Content</string>
    <string name="cmd_sd_card_button_text">Back Up or Restore from SD Card</string>
    <string name="cmd_local_wifi_lan_or_direct_button_text">Wirelessly Transfer Content</string>
    <string name="cmd_google_drive_options_title">Google Drive Options</string>
    <string name="cmd_google_drive_options_text">Select one of the following options to continue</string>
    <string name="cmd_google_drive_backup_button_text">Back Up Data to Google Drive</string>
    <string name="cmd_google_drive_restore_button_text">Restore Data from Google Drive</string>
    <string name="cmd_sd_card_options_title">SD Card Options</string>
    <string name="cmd_sd_card_options_text">Select one of the following options to continue:</string>
    <string name="cmd_sd_card_backup_button_text">Back Up Data to SD Card</string>
    <string name="cmd_sd_card_restore_button_text">Restore Data from SD Card</string>
    <string name="cmd_could_not_copy_data_google_title">Copy Failed</string>
    <string name="cmd_could_not_copy_data_google_message">It was not possible to copy all your data. Please check your internet connection and try again.</string>
    <string name="cmd_google_drive_sd_card_error_title">SD Card Not Accessible</string>
    <string name="cmd_google_drive_sd_card_error_body">It is not possible to connect to Google Drive services without an SD card in this device. Please insert an SD card and ensure that this device is not connected to a PC.</string>
    <string name="cmd_connecting_to_cloud_title">Connecting</string>
    <string name="cmd_connecting_to_google_body">Connecting to Google Drive</string>
    <string name="try_again">Retry</string>
    <string name="please_wait">Please wait a moment...</string>
    <string name="str_name">Name : </string>
    <string name="app_install_permissions_str">Permisssion</string>
    <string name="str_all_files_access_permission">Allow ORU Content Transfer to grant all files access permission.</string>
    <string name="cmd_sign_in_error_title">Could Not Sign In</string>
    <string name="cmd_sign_in_error_body">It was not possible to sign in to your account. Please check you account details and internet connection.</string>
    <string name="cmd_unable_to_download_backup_title">Unable to Download Backup</string>
    <string name="cmd_unable_to_download_backup_body">It was not possible to download the backup from the selected account. Please check your internet connection and that a content backup was previously created with the selected account.</string>
    <string name="cmd_unable_to_find_backup_title">Unable to Find Backup</string>
    <string name="cmd_unable_to_find_backup_body">No backup was found on the selected account. Please check your internet connection and that a content backup was previously created with the selected account.</string>
    <string name="cmd_unable_to_create_backup_title">Unable to Create Backup</string>
    <string name="cmd_unable_to_create_backup_body">It was not possible to create a backup on the selected account. Please check your internet connection and that there is sufficient space available on the selected account.</string>
    <string name="cmd_unexpected_fatal_error_title">An Error Has Occured</string>
    <string name="cmd_unexpected_fatal_error_body">It was not possible to complete the operation due to an unexpected error. Please check your internet connection and try again.</string>
    <string name="ept_select_content_text">\nSelect content to Transfer</string>
    <string name="ept_select_content_text_backup">\nSelect content to Back Up</string>
    <string name="wds_cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="font_light">roboto_light.ttf</string>
    <string name="font_regular">roboto_regular.ttf</string>
    <string name="read_more">Read the Sprint\'s <a href="http://www.sprint.com/privacypolicy">Privacy Policy</a>.</string>
    <string name="build_release_date">Build release date</string>
    <string name="version_number">Version number</string>
    <string name="comment_box">Please leave a comment about the app.</string>
    <string name="text_message">Sprint Content Transfer quickly and easily allows you to transfer the data between devices.</string>
    <string name="rate_app">Rate this app</string>
    <string name="comment">Comment</string>
    <string name="selecting_submit_message">By selecting submit, you agree that Sprint can collect information about your device.</string>
    <string name="session_cancelled">Session cancelled</string>
    <string name="session_cancelled_text">Content Transfer session has been cancelled. Please restart this session to transfer all your data from Source to Destination device.</string>
    <string name="title_endpage">Please remember to complete the following manual steps.</string>
    <string name="text_suggestionDest">1.Forget the Store Wi-Fi network on this device.
              \n\n2.Uninstall the ORU Content Transfer app from this device.
              \n\n3.Remember to factory reset the Source device if needed.
    </string>
    <string name="str_resume_transaction">Resume transaction?</string>
    <string name="str_start_again">START AGAIN</string>
    <string name="str_resume">RESUME</string>
    <string name="str_restart_transaction">Your last transaction was terminated.
        \nDo you want to resume the old transaction or start a new one?</string>
    <string name="wds_phone_number">Phone Number<font color="#d62828">*</font></string>
    <string name="email_id">Email ID<font color="#d62828">*</font></string>
    <string name="description">Description<font color="#d62828">*</font></string>
    <string name="policy_content">Error logs(without any personal information)would be included in this report.For more information,please review the <a href="http://www.google.com">Content Protection Policy</a>.</string>
    <string name="required">*required</string>
    <string name="descrption_hint">Please include a detailed description of the problem</string>
    <string name="thank_you">Thank You</string>
</resources>