<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wds_main_bg_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_layout"
        android:fadeScrollbars="true"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding"
            android:layout_marginTop="@dimen/em_layout_margin">


            <com.pervacio.wds.CustomTextView
                android:id="@+id/txt_transaction_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                style="@style/textStyle_bodyHeading" />

            <com.pervacio.wds.CustomTextView
                android:id="@+id/build_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_transaction_id"
                android:gravity="center"
                android:text="@string/required"
                android:textColor="@android:color/holo_red_dark"
                style="@style/textStyle_body" />

            <com.pervacio.wds.CustomTextView
                android:id="@+id/phone_number"
                style="@style/textStyle_subheading_light"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/build_release_date"
                android:text="@string/wds_phone_number" />

            <EditText
                android:id="@+id/structured_edittext_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number"
                android:layout_marginTop="@dimen/em_layout_margin"
                android:background="@drawable/edittext_background"
                android:fontFamily="@string/font_regular"
                android:gravity="left"
                android:inputType="number"
                android:padding="@dimen/default_padding"
                android:textColorHint="#B0B0B0"
                android:textSize="@dimen/text_size" />

            <com.pervacio.wds.CustomTextView
                android:id="@+id/email_id"
                style="@style/textStyle_subheading_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_text_margin"
                android:layout_below="@id/structured_edittext_phonenumber"
                android:text="@string/email_id" />

            <EditText
                android:id="@+id/structured_edittext_emaiid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_id"
                android:layout_marginTop="@dimen/em_layout_margin"
                android:background="@drawable/edittext_background"
                android:fontFamily="@string/font_regular"
                android:gravity="left"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="#B0B0B0"
                android:textSize="@dimen/text_size" />

            <com.pervacio.wds.CustomTextView
                android:id="@+id/comment_app"
                style="@style/textStyle_subheading_light"
                android:layout_marginTop="@dimen/content_text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/structured_edittext_emaiid"
                android:text="@string/description" />

            <EditText
                android:id="@+id/structured_edittext_answer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/comment_app"
                android:background="@drawable/edittext_background"
                android:fontFamily="@string/font_regular"
                android:gravity="left"
                android:hint="@string/descrption_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="10dp"
                android:textColorHint="#B0B0B0"
                android:textSize="@dimen/text_size" />


            <com.pervacio.wds.CustomTextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/structured_edittext_answer"
                android:layout_marginTop="@dimen/em_margin_top"
                android:clickable="true"
                android:visibility="gone"
                android:fontFamily="@string/font_light"
                android:text="@string/policy_content"
                android:textColor="@color/black" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <include layout="@layout/two_buttons"/>
    </LinearLayout>
</RelativeLayout>
